objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active_Abc__c</fullName>
        <label>Active Abc</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <description>Data Being added today</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No_Change</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes_change</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Name__c</fullName>
        <label>Animal Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aardwolf</fullName>
                    <label>A</label>
                </value>
                <value>
                    <fullName>Bear</fullName>
                    <label>B</label>
                </value>
                <value>
                    <fullName>Cat</fullName>
                    <label>C</label>
                </value>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Elephant</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>pig</label>
                </value>
                <value>
                    <fullName>zebra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apicklist__c</fullName>
        <description>sadcxsaSDDS</description>
        <label>Apicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replace1</fullName>
                </value>
                <value>
                    <fullName>2new</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>new1</fullName>
                </value>
                <value>
                    <fullName>new2</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bird_Name__c</fullName>
        <label>Bird Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>101</fullName>
                    <label>Peacock</label>
                </value>
                <value>
                    <fullName>202</fullName>
                    <label>Hen</label>
                </value>
                <value>
                    <fullName>pigeon</fullName>
                    <label>303</label>
                </value>
                <value>
                    <fullName>Parrot</fullName>
                    <label>404</label>
                </value>
                <value>
                    <fullName>505</fullName>
                    <label>Crow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>test the ALM mapping</description>
        <label>Classification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit_Field1__c</fullName>
        <label>Commit Field1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>testing</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>tetsk</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>tootab</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commit_Field2__c</fullName>
        <inlineHelpText>tested</inlineHelpText>
        <label>Commit Field</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Added a description to the field</description>
        <formula>IF( Data_Quality_Score__c =200,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <inlineHelpText>Additional</inlineHelpText>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>sasxdcfvgbhngbfvd</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fish_Name__c</fullName>
        <description>scxdscx</description>
        <label>Fish Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Magur</fullName>
                    <label>505</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>Rui</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>Katla</label>
                </value>
                <value>
                    <fullName>Chingri</fullName>
                    <label>100</label>
                </value>
                <value>
                    <fullName>101eee</fullName>
                    <label>101</label>
                </value>
                <value>
                    <fullName>202</fullName>
                    <label>bhangi</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merge_Field_1__c</fullName>
        <label>Merge Field 1</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arctic</fullName>
                </value>
                <value>
                    <fullName>Antarctic</fullName>
                </value>
                <value>
                    <fullName>Atlantic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revision_Details__c</fullName>
        <description>sdzcx</description>
        <label>Revision Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>old</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>common</fullName>
                </value>
                <value>
                    <fullName>twnan</fullName>
                </value>
                <value>
                    <fullName>gjahgs</fullName>
                </value>
                <value>
                    <fullName>test1</fullName>
                </value>
                <value>
                    <fullName>test2</fullName>
                </value>
                <value>
                    <fullName>test3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <description>czs</description>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track_1__c</fullName>
        <label>Track 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>additioncxdsaxdsad</description>
        <label>Track 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track_4__c</fullName>
        <label>Track 4</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try1__c</fullName>
        <label>Try1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Try2__c</fullName>
        <label>Try2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <description>csdvcbfdesf</description>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending from Client</fullName>
                </value>
                <value>
                    <fullName>Almost Comlete</fullName>
                </value>
                <value>
                    <fullName>sdfddd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X223__c</fullName>
        <label>testRT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revised__c</fullName>
        <label>revised</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test111__c</fullName>
        <label>test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>no</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>yes</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>maybe</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testFormula__c</fullName>
        <formula>100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testFormula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>testRT__c</fullName>
        <label>testRT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>sada</fullName>
                </value>
                <value>
                    <fullName>asda</fullName>
                </value>
                <value>
                    <fullName>dasd</fullName>
                </value>
                <value>
                    <fullName>xcsd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test123</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                    <label>1010</label>
                </value>
                <value>
                    <fullName>2020</fullName>
                    <label>2</label>
                </value>
                <value>
                    <fullName>33</fullName>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>CustomMP</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
        <filterScope>Everything</filterScope>
        <label>Custom MP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>ABCRT1</fullName>
        <active>false</active>
        <label>ABCRT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT1</fullName>
        <active>true</active>
        <label>RT1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT2</fullName>
        <active>true</active>
        <label>RT2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RT3</fullName>
        <active>true</active>
        <label>RT3</label>
    </recordTypes>
    <recordTypes>
        <fullName>TestRT</fullName>
        <active>true</active>
        <label>TestRT</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Mandate_a_field</fullName>
        <active>false</active>
        <errorConditionFormula>Classification__c == &apos;&apos;</errorConditionFormula>
        <errorMessage>Please fill the classification category</errorMessage>
    </validationRules>
</CustomObject>